# Copyright © SixtyFPS GmbH <info@slint-ui.com>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-commercial

[package]
name = "slint-cpp"
version = "0.3.3"
authors = ["Slint Developers <info@slint-ui.com>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0-only OR LicenseRef-Slint-commercial"
description = "Slint C++ integration"
repository = "https://github.com/slint-ui/slint"
homepage = "https://slint-ui.com"
publish = false
rust-version.workspace = true
# prefix used to convey path to generated includes to the C++ test driver
links = "slint_cpp"

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

# Note, these features need to be kept in sync (along with their defaults) in
# the C++ crate's CMakeLists.txt
[features]
#interpreter = ["slint-interpreter"]
#testing = ["i-slint-backend-testing"] # Enable some function used by the integration tests
#
#backend-qt = ["i-slint-backend-selector/i-slint-backend-qt"]
#backend-winit = ["i-slint-backend-selector/backend-winit"]
#backend-winit-x11 = ["i-slint-backend-selector/backend-winit-x11"]
#backend-winit-wayland = ["i-slint-backend-selector/backend-winit-wayland"]
#renderer-winit-femtovg = ["i-slint-backend-selector/renderer-winit-femtovg"]
#renderer-winit-skia = ["i-slint-backend-selector/renderer-winit-skia"]
#renderer-winit-skia-opengl = ["i-slint-backend-selector/renderer-winit-skia-opengl"]
#

[dependencies]
i-slint-core = { version = "=0.3.1", path="../../internal/core", default-features = false, features = ["ffi", "unsafe-single-threaded"] }
mcu-board-support = {path="../../examples/mcu-board-support",features=["pico-st7789"]}


[build-dependencies]
anyhow = "1.0"
cbindgen = "0.24"
proc-macro2 = "1.0.11"
i-slint-common = { version = "=0.3.3", path="../../internal/common" }
